--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
@@ -31,8 +33,7 @@
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
